# vust-desk

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: manual-tag-release.yml  publish.yml  release.yml  tag-release.yml
docs/: THEMING_GUIDE.md  主题颜色建议.md
src/: main.tsx  router.ts  styled.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Tauri.dev.toml  tauri.conf.json  tauri.dev.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_baseline.sql  0001_users.sql  0002_add_refresh_token.sql  0002_sync_metadata.sql  0003_website_groups.sql  0004_websites.sql  0005_asset_categories.sql  0006_assets.sql  0007_create_search_engines.sql  0008_assets_sale_fields.sql  0009_add_rev_and_sync_rev.sql  0010_add_is_deleted_to_search_engines.sql  0011_create_sync_logs.sql
src-tauri/src/: init.rs  lib.rs  main.rs
src-tauri/src/invokes/: bookmark_parser.rs  browser.rs  metadata.rs  mod.rs  sync.rs
src-tauri/src/modules/: db.rs  logger.rs  mod.rs  tray.rs
src-tauri/src/types/: mod.rs  session.rs  sync.rs
src-tauri/src/utils/: mod.rs
src/components/common/: DynamicIcon.tsx  InitializationError.tsx  Loading.tsx
src/components/common/AlertModal/: AlertModal.styles.ts  AlertModal.tsx
src/components/common/ConfirmationModal/: ConfirmationModal.styles.ts  ConfirmationModal.tsx
src/components/common/CustomSelect/: CustomSelect.styles.ts  CustomSelect.tsx
src/components/common/LoadingOverlay/: LoadingOverlay.styles.ts  LoadingOverlay.tsx
src/components/common/SyncOverlay/: SyncOverlay.tsx
src/components/common/Tooltip/: Tooltip.styles.ts  Tooltip.tsx
src/components/layout/: AppEventManager.tsx  Menus.tsx  SettingsLayout.styles.ts  UserIcon.tsx  WindowControls.tsx
src/components/styled/: StyledButton.ts  StyledForm.ts  StyledModal.ts
src/constants/: index.ts  links.ts  menuItems.ts
src/contexts/: AppProvider.tsx  AuthContext.tsx  EnvironmentContext.tsx  IconRefreshContext.tsx  LaunchpadSettingsContext.tsx  ModalContext.tsx  PanelSettingsContext.tsx  SyncContext.tsx  ThemeContext.tsx
src/features/Assets/AssetForm/: AssetForm.styles.ts  AssetForm.tsx
src/features/Assets/CategoryManagement/: CategoryManagementModal.tsx
src/features/Assets/Dashboard/: AssetDashboard.tsx  Dashboard.styles.ts
src/features/Assets/Modal/: Modal.styles.ts  Modal.tsx
src/features/Assets/types/: index.ts
src/features/Auth/: AccountSwitcherModal.tsx  AuthSettings.tsx  DataClaim.tsx  LoginModal.tsx  UserProfileCard.tsx  UserProfileModal.tsx
src/features/Launchpad/components/: ConfigModal.styles.ts  ConfigModal.tsx  ContextMenu.tsx  EditWebsiteItemModal.tsx  GroupModal.tsx  WebsiteGroupSection.tsx  (+5 more)
src/features/Settings/: BrowserSettings.tsx  LanguageSettings.tsx  Settings.styles.ts  Settings.tsx  SettingsModal.tsx
src/hooks/: useDisableBrowserShortcuts.ts  useLocalStorage.ts  useMacAppMenu.tsx
src/locales/: en.json  zh.json
src/pages/: _app.tsx  index.tsx
src/pages/admin/: assets.tsx
src/pages/help/: about.tsx  changelog.tsx  update.tsx
src/services/: apiClient.ts  assetDb.ts  claim.ts  db.ts  errors.ts  iconSync.ts  launchpadDb.ts  panelDb.ts  sync.ts  user.ts
src/styles/: GlobalStyles.ts  themes.ts
src/styles/launchpad/: index.styles.ts
src/styles/panel/: index.styles.ts
src/styles/tokens/: borderWidths.ts  colors.ts  radii.ts  sizing.ts  spacing.ts  typography.ts  zIndex.ts
src/types/: session.ts  sync.ts
src/utils/: browser.ts  changelogParser.ts  colors.ts  config.ts  dateHelpers.ts  dragging.ts  fs.ts  index.ts  url.ts
(+15 files in other folders)
