[package]
name = "vust"
version = "0.0.0"
description = "Vust Desk"
authors = ["sfwwslm"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = ["protocol-asset", "tray-icon"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log="0.4.28"
scraper = "0.24.0"
url = "2.5.7"
sha2 = "0.10.9"
hex = "0.4.3"

tauri-plugin-log = "2.7.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-opener = "2.5.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-http = { version = "2.5.4", features = ["json", "dangerous-settings", "blocking", "multipart"] }
tauri-plugin-notification = "2.3.3"

[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时优化。
opt-level = "s"   # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
strip = true      # 确保移除调试符号。

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-updater = "2.9.0"
tauri-plugin-window-state = "2.4.1"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.3.1"
